# ArrayfireParallelLibrary

./: .gitignore  CMakeLists.txt  README.md  mainHomeworkPoiseuilleZouHe.cpp  mainHomeworkPoiseuilleZouHe.cpp.initCopy  mainHomeworkPoiseuilleZouHe_inputs.xml  make.sh
